--- a/Web/package.json
+++ b/Web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vitejs/plugin-react-swc": "^4.0.1",
     "chart.js": "^4.4.0",
+    "firebase": "^12.7.0",
     "i18next": "^25.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
